--- a/index.html
+++ b/index.html
@@ -419,7 +419,8 @@
 
         <!-- Leaderboard Screen -->
         <div id="leaderboard-screen" class="screen">
-            <h2 class="text-xl sm:text-2xl md:text-3xl">Leaderboard</h2>
+            <h2 class="text-xl sm:text-2xl md:text-3xl">Global Leaderboard</h2>
+            <div id="leaderboard-loading" class="text-xl text-yellow-400 my-4">Loading Leaderboard...</div>
             <table id="leaderboard-table" class="mx-auto text-sm sm:text-base">
                 <thead>
                     <tr>
@@ -445,6 +446,70 @@
             <button id="modal-close-button" class="text-sm sm:text-base">OK</button>
         </div>
     </div>
+
+    <!-- Firebase SDK -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
+        import { getAuth, signInAnonymously, signInWithCustomToken, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getFirestore, collection, addDoc, query, orderBy, onSnapshot, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+
+        // Firebase Global Variables (provided by Canvas environment)
+        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
+        const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : {};
+        const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+        const auth = getAuth(app);
+
+        // Expose Firebase objects and functions to the global window object
+        // This is done so the other script block can access them without 'import'
+        window.firebaseInitialized = false;
+        window.currentUserId = null;
+        window.db = db;
+        window.auth = auth;
+        window.appId = appId;
+        window.addDoc = addDoc;
+        window.collection = collection;
+        window.query = query;
+        window.orderBy = orderBy;
+        window.onSnapshot = onSnapshot;
+        window.serverTimestamp = serverTimestamp;
+
+        // Authenticate user when Firebase is ready
+        onAuthStateChanged(auth, async (user) => {
+            if (user) {
+                window.currentUserId = user.uid;
+                console.log("Firebase: User signed in:", user.uid);
+            } else {
+                console.log("Firebase: No user signed in. Attempting anonymous sign-in...");
+                try {
+                    if (initialAuthToken) {
+                        await signInWithCustomToken(auth, initialAuthToken);
+                        window.currentUserId = auth.currentUser.uid;
+                        console.log("Firebase: Signed in with custom token.");
+                    } else {
+                        await signInAnonymously(auth);
+                        window.currentUserId = auth.currentUser.uid;
+                        console.log("Firebase: Signed in anonymously.");
+                    }
+                } catch (error) {
+                    console.error("Firebase Auth Error:", error);
+                    window.showCustomModal("Auth Error", "Could not sign in for leaderboard. Please try refreshing.");
+                }
+            }
+            window.firebaseInitialized = true; // Mark Firebase as ready
+
+            // If leaderboard screen is currently active or main menu is active,
+            // (meaning the user might want to see the leaderboard immediately),
+            // trigger loading of global leaderboard data.
+            if (document.getElementById('leaderboard-screen').classList.contains('active') || document.getElementById('main-menu').classList.contains('active')) {
+                window.loadGlobalLeaderboard();
+            }
+        });
+    </script>
+
 
     <script>
         // Game Data: GRE Words and Definitions
@@ -605,15 +670,15 @@
         let currentScore = 0;
         let wrongAttempts = 0;
         let currentWord = {};
-        let leaderboard = [];
+        let globalLeaderboardData = []; // This will hold scores from Firestore
         let musicPlaying = false; // Track music state
-        let gameMode = 'solo'; // Always 'solo' now
 
         // DOM Elements
         const mainMenuScreen = document.getElementById('main-menu');
         const gameScreen = document.getElementById('game-screen');
         const gameOverScreen = document.getElementById('game-over-screen');
         const leaderboardScreen = document.getElementById('leaderboard-screen');
+        const leaderboardLoading = document.getElementById('leaderboard-loading'); // New loading indicator
 
         const playSoloButton = document.getElementById('play-solo-button');
         const showLeaderboardMainMenuButton = document.getElementById('show-leaderboard-main');
@@ -628,7 +693,7 @@
         const playAgainButton = document.getElementById('play-again-button');
         const mainMenuFromGameOverButton = document.getElementById('main-menu-from-gameover');
         const leaderboardBody = document.getElementById('leaderboard-body');
-        const downloadLeaderboardButton = document.getElementById('download-leaderboard-button'); // Download button
+        const downloadLeaderboardButton = document.getElementById('download-leaderboard-button');
         const mainMenuFromLeaderboardButton = document.getElementById('main-menu-from-leaderboard');
         const backgroundMusic = document.getElementById('background-music');
         const correctSound = document.getElementById('correct-sound');
@@ -658,10 +723,19 @@
                 screen.classList.remove('active');
             });
             document.getElementById(screenId).classList.add('active');
+            // If going to leaderboard, ensure it's loaded
+            if (screenId === 'leaderboard-screen') {
+                if (window.firebaseInitialized) {
+                    loadGlobalLeaderboard();
+                } else {
+                    leaderboardBody.innerHTML = '<tr><td colspan="3">Initializing Firebase...</td></tr>';
+                    leaderboardLoading.classList.remove('hidden');
+                }
+            }
         }
 
         // Function to show custom modal
-        function showCustomModal(title, message) {
+        window.showCustomModal = function(title, message) { // Made global
             modalTitle.textContent = title;
             modalMessage.textContent = message;
             customModalOverlay.classList.remove('hidden');
@@ -778,63 +852,133 @@
             saveScoreButton.disabled = false; // Enable save button
         }
 
-        // --- Leaderboard Logic ---
+        // --- Global Leaderboard Logic (Firestore) ---
 
-        // Loads leaderboard data from local storage
-        function loadLeaderboard() {
-            const storedLeaderboard = localStorage.getItem('wordWarGreLeaderboard');
-            if (storedLeaderboard) {
-                leaderboard = JSON.parse(storedLeaderboard);
-            } else {
-                leaderboard = [];
+        // Function to retry Firebase operations with exponential backoff
+        async function retryFirebaseCall(fn, retries = 5, delay = 1000) {
+            for (let i = 0; i < retries; i++) {
+                try {
+                    return await fn();
+                } catch (error) {
+                    if (error.code === 'unavailable' || error.code === 'resource-exhausted' || error.code === 'aborted') {
+                        console.warn(`Firebase call failed (${error.code}). Retrying in ${delay / 1000}s...`);
+                        await new Promise(res => setTimeout(res, delay));
+                        delay *= 2; // Exponential backoff
+                    } else {
+                        throw error; // Re-throw non-transient errors
+                    }
+                }
             }
+            throw new Error(`Firebase call failed after ${retries} retries.`);
         }
 
-        // Saves the current score to the leaderboard
-        function saveScore() {
+
+        // Saves the current score to the global leaderboard
+        async function saveScore() {
             const playerName = playerNameInput.value.trim();
-            if (playerName) {
-                leaderboard.push({ name: playerName, score: currentScore });
-                // Sort by score descending, then by name ascending for ties
-                leaderboard.sort((a, b) => b.score - a.score || a.name.localeCompare(b.name));
-                // Keep only top 10 scores
-                leaderboard = leaderboard.slice(0, 10);
-                localStorage.setItem('wordWarGreLeaderboard', JSON.stringify(leaderboard));
-                displayLeaderboard(); // Refresh leaderboard display
-                showScreen('leaderboard-screen');
-                saveScoreButton.disabled = true; // Prevent multiple saves
-            } else {
+            if (!playerName) {
                 showCustomModal("Oops!", "Please enter your name to save your score!");
-            }
-        }
-
-        // Displays the leaderboard table
-        function displayLeaderboard() {
-            leaderboardBody.innerHTML = ''; // Clear previous entries
-            if (leaderboard.length === 0) {
-                leaderboardBody.innerHTML = '<tr><td colspan="3">No scores yet!</td></tr>';
                 return;
             }
-            leaderboard.forEach((entry, index) => {
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td>${index + 1}</td>
-                    <td>${entry.name}</td>
-                    <td>${entry.score}</td>
-                `;
-                leaderboardBody.appendChild(row);
-            });
-            showScreen('leaderboard-screen');
+
+            if (!window.firebaseInitialized || !window.db || !window.addDoc || !window.collection) {
+                showCustomModal("Error", "Leaderboard service not ready. Please try again in a moment.");
+                return;
+            }
+
+            saveScoreButton.disabled = true; // Disable to prevent multiple submissions
+
+            try {
+                // Add score to Firestore
+                await retryFirebaseCall(() => window.addDoc(window.collection(window.db, `artifacts/${window.appId}/public/data/globalLeaderboard`), {
+                    name: playerName,
+                    score: currentScore,
+                    timestamp: window.serverTimestamp(), // Use server timestamp for consistent ordering
+                    userId: window.currentUserId || 'anonymous' // Store user ID (can be anonymous)
+                }));
+                showCustomModal("Score Saved!", "Your score has been added to the global leaderboard!");
+                displayGlobalLeaderboard(); // Refresh leaderboard display
+                showScreen('leaderboard-screen');
+            } catch (e) {
+                console.error("Error saving score to Firestore:", e);
+                showCustomModal("Save Error", `Could not save score: ${e.message}`);
+                saveScoreButton.disabled = false; // Re-enable on error
+            }
         }
 
-        // --- Download Leaderboard Function ---
+        // Displays the global leaderboard table
+        window.loadGlobalLeaderboard = function() { // Made global so Firebase script can call it
+            leaderboardLoading.classList.remove('hidden'); // Show loading indicator
+            leaderboardBody.innerHTML = ''; // Clear previous entries
+
+            if (!window.firebaseInitialized || !window.db || !window.collection || !window.query || !window.orderBy || !window.onSnapshot) {
+                leaderboardBody.innerHTML = '<tr><td colspan="3">Leaderboard service not available.</td></tr>';
+                leaderboardLoading.classList.add('hidden');
+                return;
+            }
+
+            const q = window.query(window.collection(window.db, `artifacts/${window.appId}/public/data/globalLeaderboard`),
+                window.orderBy('score', 'desc')
+                // You can add .limit(10) here if you want only top 10 from Firestore,
+                // but for now we fetch all and slice in memory to allow flexible display.
+            );
+
+            // Listen for real-time updates to the leaderboard
+            window.onSnapshot(q, (querySnapshot) => {
+                leaderboardLoading.classList.add('hidden'); // Hide loading indicator
+                const scores = [];
+                querySnapshot.forEach((doc) => {
+                    scores.push(doc.data());
+                });
+
+                // Sort and limit in memory (if not limited by query)
+                scores.sort((a, b) => b.score - a.score);
+                globalLeaderboardData = scores.slice(0, 10); // Keep top 10 for display
+
+                leaderboardBody.innerHTML = ''; // Clear previous entries
+                if (globalLeaderboardData.length === 0) {
+                    leaderboardBody.innerHTML = '<tr><td colspan="3">No scores yet! Be the first!</td></tr>';
+                    return;
+                }
+
+                globalLeaderboardData.forEach((entry, index) => {
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+                        <td>${index + 1}</td>
+                        <td>${entry.name}</td>
+                        <td>${entry.score}</td>
+                    `;
+                    leaderboardBody.appendChild(row);
+                });
+            }, (error) => {
+                console.error("Error fetching global leaderboard:", error);
+                leaderboardLoading.classList.add('hidden');
+                leaderboardBody.innerHTML = '<tr><td colspan="3">Error loading leaderboard.</td></tr>';
+                showCustomModal("Leaderboard Error", "Could not load global leaderboard. Check your internet connection.");
+            });
+        }
+
+
+        // Displays the leaderboard screen (this just switches screens, data is loaded by onSnapshot)
+        function displayGlobalLeaderboard() {
+            showScreen('leaderboard-screen');
+            // Data loading is handled by the onSnapshot listener triggered by loadGlobalLeaderboard()
+            // which is called when Firebase is initialized or when leaderboard screen is activated.
+        }
+
+
+        // --- Download Leaderboard Function (now downloads global data) ---
         function downloadLeaderboard() {
-            const leaderboardData = JSON.stringify(leaderboard, null, 2); // Pretty print JSON
-            const blob = new Blob([leaderboardData], { type: 'application/json' });
+            if (globalLeaderboardData.length === 0) {
+                showCustomModal("No Data", "Leaderboard is empty to download.");
+                return;
+            }
+            const leaderboardDataString = JSON.stringify(globalLeaderboardData, null, 2); // Pretty print JSON
+            const blob = new Blob([leaderboardDataString], { type: 'application/json' });
             const url = URL.createObjectURL(blob);
             const a = document.createElement('a');
             a.href = url;
-            a.download = 'word_war_gre_leaderboard.json';
+            a.download = 'word_war_gre_global_leaderboard.json';
             document.body.appendChild(a);
             a.click();
             document.body.removeChild(a);
@@ -861,8 +1005,7 @@
 
         // --- Event Listeners ---
         window.onload = function() {
-            loadLeaderboard();
-            // Attempt to autoplay music
+            // Attempt to autoplay music (subject to browser policies)
             backgroundMusic.volume = 0.5;
             backgroundMusic.play().then(() => {
                 musicPlaying = true;
@@ -873,11 +1016,13 @@
                 console.error("Autoplay music failed:", e);
                 showCustomModal("Music Blocked", "Your browser blocked automatic music playback. Click 'Toggle Music' to enable it.");
             });
+            // Initial call to load leaderboard (will wait for Firebase to initialize)
+            window.loadGlobalLeaderboard();
         };
 
         // Main Menu Buttons
         playSoloButton.addEventListener('click', startGame);
-        showLeaderboardMainMenuButton.addEventListener('click', displayLeaderboard);
+        showLeaderboardMainMenuButton.addEventListener('click', displayGlobalLeaderboard); // Changed to global
         toggleMusicButton.addEventListener('click', toggleMusic);
 
         // Game Over Buttons
