--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         }
 
         #word-display {
-            font-size: 2rem; /* Base font size */
+            font-size: 2rem; /* Default for smaller screens like tablets */
             font-weight: bold;
             color: #00FF00; /* Neon green */
             margin-bottom: 2rem; /* Responsive margin */
@@ -162,10 +162,13 @@
             justify-content: center;
             padding: 0.5rem; /* Add padding for long words */
         }
-        @media (min-width: 640px) {
+        @media (max-width: 480px) { /* Extra small phones */
+            #word-display { font-size: 1.75rem; min-height: 3.5rem; } /* Made smaller for tiny screens */
+        }
+        @media (min-width: 640px) { /* sm breakpoint */
             #word-display { font-size: 2.5rem; min-height: 5rem; }
         }
-        @media (min-width: 768px) {
+        @media (min-width: 768px) { /* md breakpoint */
             #word-display { font-size: 2.8rem; min-height: 5rem; }
         }
 
@@ -456,7 +459,7 @@
         // Firebase Global Variables (provided by Canvas environment)
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
         const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : {};
-        const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
+        const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? initialAuthToken : null; // Fixed typo here
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
