--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             transition: all 0.1s ease-in-out;
             text-shadow: 2px 2px #000;
             box-shadow: 0 8px #8B008B; /* Darker purple shadow for depth */
-            margin: 0.75rem; /* Responsive margin */
+            /* Removed fixed margins here to use flexbox gap */
             outline: none;
             position: relative;
             top: 0;
@@ -118,10 +118,10 @@
             letter-spacing: 1px;
         }
         @media (min-width: 640px) { /* sm breakpoint */
-            button { padding: 1.125rem 2rem; font-size: 1.125rem; margin: 1rem; }
+            button { padding: 1.125rem 2rem; font-size: 1.125rem; }
         }
         @media (min-width: 768px) { /* md breakpoint */
-            button { padding: 1.25rem 2.5rem; font-size: 1.25rem; margin: 1.25rem; }
+            button { padding: 1.25rem 2.5rem; font-size: 1.25rem; }
         }
 
 
@@ -151,9 +151,9 @@
         #word-display {
             font-size: 2rem; /* Default for smaller screens like tablets */
             font-weight: bold;
-            color: #00FF00; /* Neon green */
+            color: #FFFFFF; /* White for clarity */
             margin-bottom: 2rem; /* Responsive margin */
-            text-shadow: 4px 4px #00FFFF; /* Aqua shadow */
+            text-shadow: 0 0 10px #4B0082, 0 0 20px #4B0082; /* Dark purple glow */
             word-wrap: break-word;
             transition: color 0.1s ease-in-out, text-shadow 0.1s ease-in-out;
             min-height: 4rem; /* Ensure space for feedback */
@@ -358,10 +358,11 @@
             button {
                 padding: 0.8rem 1.2rem;
                 font-size: 0.9rem;
-                margin: 0.5rem;
                 border-width: 3px;
                 border-radius: 8px;
                 box-shadow: 0 4px #8B008B;
+                /* No vertical margin here, flexbox will handle it */
+                margin: 0; /* Remove horizontal margin as well for full width */
             }
         }
     </style>
@@ -379,12 +380,12 @@
     <audio id="correct-sound">
         <!-- Replace with your public URL or relative path -->
         <source src="correct.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
+        Your browser does not conduct the audio element.
     </audio>
     <audio id="wrong-sound">
-        <!-- Replace with your public URL or relative path -->
-        <source src="wrong.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
+        <!-- New error audio file added -->
+        <source src="Error - Sound Effect Non copyright sound effe....mp3" type="audio/mpeg">
+        Your browser does not conduct the audio element.
     </audio>
 
     <div class="game-container">
@@ -392,9 +393,11 @@
         <div id="main-menu" class="screen active">
             <h1 class="text-3xl sm:text-4xl md:text-5xl">Word War GRE</h1>
             <p class="text-sm sm:text-base md:text-lg mb-8">Test your GRE vocabulary skills!</p>
-            <button id="play-solo-button" class="text-base sm:text-lg md:text-xl">Play Game</button>
-            <button id="show-leaderboard-main" class="text-base sm:text-lg md:text-xl">Leaderboard</button>
-            <button id="toggle-music-button" class="text-base sm:text-lg md:text-xl mt-4">Toggle Music</button>
+            <div class="flex flex-col space-y-4 items-center w-full"> <!-- Added flexbox for buttons -->
+                <button id="play-solo-button" class="text-base sm:text-lg md:text-xl w-full max-w-xs">Play Game</button>
+                <button id="show-leaderboard-main" class="text-base sm:text-lg md:text-xl w-full max-w-xs">Leaderboard</button>
+                <button id="toggle-music-button" class="text-base sm:text-lg md:text-xl w-full max-w-xs">Toggle Music</button>
+            </div>
         </div>
 
         <!-- Game Screen (Solo) -->
@@ -702,7 +705,6 @@
         const mainMenuFromLeaderboardButton = document.getElementById('main-menu-from-leaderboard');
         const backgroundMusic = document.getElementById('background-music');
         const correctSound = document.getElementById('correct-sound');
-        // Fixed typo here: should be `document.getElementById('wrong-sound')`
         const wrongSound = document.getElementById('wrong-sound'); 
 
         // Custom Modal Elements
