--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         #word-display {
             font-size: 2rem; /* Default for smaller screens like tablets */
             font-weight: bold;
-            color: #FFFFFF; /* White for clarity */
+            color: #FFFFFF; /* Changed to white for better visibility */
             margin-bottom: 2rem; /* Responsive margin */
             text-shadow: 0 0 10px #4B0082, 0 0 20px #4B0082; /* Dark purple glow */
             word-wrap: break-word;
